; ModuleID = '/home/carl/AnghaBench/esp-idf/components/newlib/test/extr_test_time.c_start_measure.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/newlib/test/extr_test_time.c_start_measure.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @start_measure to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @start_measure(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.timeval, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  br label %8

8:                                                ; preds = %12, %2
  %9 = call i32 (...) @esp_timer_get_time()
  store i32 %9, i32* %6, align 4
  %10 = call i32 @gettimeofday(%struct.timeval* %5, i32* null)
  %11 = call i32 (...) @esp_timer_get_time()
  store i32 %11, i32* %7, align 4
  br label %12

12:                                               ; preds = %8
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* %6, align 4
  %15 = sub nsw i32 %13, %14
  %16 = icmp sgt i32 %15, 40
  br i1 %16, label %8, label %17

17:                                               ; preds = %12
  %18 = load i32, i32* %7, align 4
  %19 = load i32*, i32** %4, align 8
  store i32 %18, i32* %19, align 4
  %20 = getelementptr inbounds %struct.timeval, %struct.timeval* %5, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = trunc i64 %21 to i32
  %23 = sext i32 %22 to i64
  %24 = mul nsw i64 %23, 1000000
  %25 = getelementptr inbounds %struct.timeval, %struct.timeval* %5, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = sext i32 %26 to i64
  %28 = add nsw i64 %24, %27
  %29 = trunc i64 %28 to i32
  %30 = load i32*, i32** %3, align 8
  store i32 %29, i32* %30, align 4
  ret void
}

declare dso_local i32 @esp_timer_get_time(...) #1

declare dso_local i32 @gettimeofday(%struct.timeval*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
